# kioskogj

./: .gitignore  IOS_NATIVE_GUIDELINES.md  README.md  ToDos.txt  castigos.html  index.html  kiosko-gj-prompt.md  package-lock.json  package.json  server.js  setup.html  stats.html  styles.css
backend/: .env.example  README.md  alembic.ini  dev.bat  dev.ps1  dev.sh  pyproject.toml  script.py
backend/alembic/: README.md  env.py  script.py.mako
backend/alembic/versions/: 20260506_1200_inicial.py  20260507_2000_categoria_producto.py  20260507_2238_imagen_producto.py  20260508_0136_pedidos_grupo.py  20260508_1000_pedidos.py  20260508_1400_pedido_preparado.py
backend/app/: auth.py  config.py  db.py  main.py  migrate_legacy.py  seed.py  tiempo.py
backend/app/models/: __init__.py  castigo.py  configuracion.py  nino.py  pedido.py  producto.py  transaccion.py
backend/app/routers/: backup.py  castigos.py  configuracion.py  estadisticas.py  ninos.py  pedidos.py  productos.py  transacciones.py
backend/app/schemas/: __init__.py  castigo.py  configuracion.py  estadisticas.py  nino.py  pedido.py  producto.py  transaccion.py
backend/app/services/: compra.py  configuracion.py  estadisticas.py  historial.py
backend/scripts/: seed_demo.py  send_backup.py
backend/tests/: conftest.py  test_modelos.py  test_pedidos.py
data/: database.db
deploy/: install_on_pi.sh  uninstall_octopi.sh  upload.ps1  upload.sh
frontend/: dev.bat  dev.ps1  dev.sh  index.html  package.json  pnpm-lock.yaml  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo
frontend/src/: App.tsx  index.css
frontend/src/api/: backup.ts  castigos.ts  client.ts  configuracion.ts  estadisticas.ts  ninos.ts  pedidos.ts  productos.ts  transacciones.ts  types.ts
frontend/src/components/: CategoriaIcon.tsx  CountdownBadge.tsx  ImportarNinosModal.tsx  Layout.tsx  NuevoPedidoModal.tsx
frontend/src/components/forms/: NinoForm.tsx  ProductoForm.tsx
frontend/src/components/ui/: ConfirmDialog.tsx  Input.tsx  Modal.tsx  PinDialog.tsx  Switch.tsx  Tabs.tsx  Toaster.tsx
frontend/src/lib/: categorias.ts  csv.ts  format.ts
frontend/src/pages/: Ajustes.tsx  Castigos.tsx  Estadisticas.tsx  Kiosko.tsx  Pedidos.tsx
frontend/src/store/: authStore.ts  cartStore.ts  toastStore.ts
