[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kiosko-gj-backend"
version = "2.0.0"
description = "API del kiosko de campamento (FastAPI + SQLite). Pensada para Raspberry Pi 3B+."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Kiosko GJ" }]
license = { text = "MIT" }

# Dependencias en tiempo de ejecución.
# Cada una está aquí por una razón concreta; si no la usas, no la añadas.
dependencies = [
    # Framework web. Trae Starlette y Pydantic v2 transitivamente.
    "fastapi>=0.115,<0.116",

    # Servidor ASGI. El extra "standard" añade uvloop + httptools + watchfiles.
    # En Linux/ARM (Pi) uvloop da una mejora real de latencia; lo dejamos.
    # Lo arrancaremos con --workers 1 (la 3B+ con 1 GB no aguanta más).
    "uvicorn[standard]>=0.32,<0.33",

    # ORM declarativo moderno (Mapped[] / mapped_column).
    # Usamos el modo SÍNCRONO a propósito: SQLite serializa escrituras de todos modos,
    # 1-3 monitores no se benefician de async DB y aiosqlite añade complejidad sin pago.
    "sqlalchemy>=2.0,<2.1",

    # Migraciones. El spec las exige.
    "alembic>=1.13,<2",

    # Pin mínimo de Pydantic v2 (FastAPI ya lo trae, pero blindamos la versión).
    "pydantic>=2.7,<3",

    # Settings desde .env / env vars (BaseSettings vive aquí desde Pydantic v2).
    "pydantic-settings>=2.4,<3",

    # Logs. Preferencia explícita del usuario (sección 10 del spec).
    # Más simple que structlog para este tamaño de proyecto.
    "loguru>=0.7,<0.8",

    # Necesario para FastAPI cuando se reciben formularios o uploads.
    # Lo añadimos ya porque la importación CSV de Ajustes lo va a usar.
    "python-multipart>=0.0.9",

    # Base de datos de zonas horarias para `zoneinfo` en Windows (la Pi de
    # Linux no la necesita, pero el dev local sí). Sin esto, ZoneInfo("Europe/Madrid")
    # lanza ModuleNotFoundError.
    "tzdata>=2024.2; sys_platform == 'win32'",
]

[project.optional-dependencies]
# Dependencias solo de desarrollo / tests. Se instalan con `pip install -e ".[dev]"`.
dev = [
    "pytest>=8,<9",
    "pytest-asyncio>=0.24,<0.25",
    # FastAPI TestClient depende de httpx en versiones modernas.
    "httpx>=0.27,<0.28",
    # Linter + formatter en una sola herramienta. Sustituye a black+isort+flake8.
    # Ideal para un mantenedor único: una config, un comando.
    "ruff>=0.6,<0.7",
]

[project.scripts]
# Atajo para arrancar en desarrollo: `kiosko-dev`
kiosko-dev = "app.main:run_dev"

# --- Configuración de herramientas ---

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
# Selección razonable: errores PEP8 (E), pyflakes (F), import order (I),
# bugbear (B), pyupgrade (UP), simplify (SIM).
select = ["E", "F", "I", "B", "UP", "SIM"]
ignore = [
    "E501",  # line-too-long: ya lo controla el formatter; si se pasa, suele ser un string.
]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
asyncio_mode = "auto"
